--- a/Projects/Portfolio/style.css
+++ b/Projects/Portfolio/style.css
@@ -345,21 +345,21 @@ a{
 }
 
 #project1{
-    background-image: url(Project1.png); 
+    background-image: url(./images/projects/Project1.png); 
 }
 
 #project2{
     margin-left: 120px;
-    background-image: url(Project2.png);
+    background-image: url(./images/projects/Project2.png);
 }
 
 #project3{
-    background-image: url(Project3.png);
+    background-image: url(./images/projects/Project3.png);
 }
 
 #project4{
     margin-left: 120px;
-    background-image: url(Project4.png);
+    background-image: url(./images/projects/Project4.png);
 }
 
 .project-number{
@@ -703,5 +703,3 @@ footer{
     display: flex;
     gap: 1rem;
 }
-
-
